[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "railtracks[visual]>=1.3.10",
    "rich>=15.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/amygdala"]
